# obs-accessibility

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  install.iss.in
.github/actions/build-plugin/: action.yaml
.github/actions/check-changes/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml  dispatch.yaml  pr-pull.yaml  push.yaml
cmake/common/: compiler_common.cmake  helpers_common.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake
cmake/macos/: xcode.cmake
cmake/windows/: defaults.cmake
data/: signals.txt
data/locale/: en-US.ini  zh-CN.ini
src/: audio.cpp  audio.h  config.cpp  config.h  events.cpp  events.h  interface.cpp  interface.h  obs-accessibility.cpp  obs-accessibility.h  plugin-main.c  plugin-support.c.in  plugin-support.h  speech.cpp  speech.h  text.cpp  text.h
vcpkg/: vcpkg.json
vcpkg/ports/ethindp-prism/: fix-static-implibs.patch  portfile.cmake
vcpkg/ports/universalspeech/: portfile.cmake  universalspeech-config.cmake.in
vcpkg/triplets/: arm64-osx.cmake
